@@ -88,6 +88,3 @@ test : test-compile 01 02 03 04 05 06 07 08 09 10
 10 :
 	./10-listener-mount-point.py
 
-# Tests for with WITH_STRICT_PROTOCOL defined
-strict-test : 
-	./01-connect-invalid-id-24.py
